@@ -1,5 +1,0 @@
-INCLUDE_DIRECTORIES("${PROJECT_INCLUDE_DIR}")
-
-ADD_EXECUTABLE(bot bot.cpp)
-
-TARGET_LINK_LIBRARIES(bot)
